# asociacionexalumnoscnba_com_ar

./: .gitignore
fuente/: produccion.wsgi  pyproject.toml  requeriments.txt  staging.py  staging.wsgi
fuente/exacnba/: __init__.py  config.py  errores.py
fuente/exacnba/base_de_datos/: __init__.py  errores.py
fuente/exacnba/estatico/: css.bat
fuente/exacnba/estatico/css/: base.css  beneficios.css  estilos.css  inicio.css  la-asociacion.css  promociones.css
fuente/exacnba/estatico/css/min-css/: beneficios.css  la-asociacion.css
fuente/exacnba/estatico/js/: tinyeditor.js  utiles.js
fuente/exacnba/estatico/min-css/: base.css  beneficios.css  estilos.css  inicio.css  la-asociacion.css  promociones.css
fuente/exacnba/estatico/tipografias/: shrikhand.css
fuente/exacnba/plantillas/: actividades.html.j2  base.html.j2  beneficios.html.j2  inicio.html.j2  la-asociacion.html.j2  promociones.html.j2
fuente/exacnba/plantillas/parciales/: contactoBase.html.j2  contactoCorrecto.html.j2
fuente/exacnba/utiles/: imagenes.py
fuente/exacnba/vistas/: __init__.py
